[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Settings/SettingMenu.gd" type="Script" id=1]
[ext_resource path="res://art/login/LoginBG.png" type="Texture" id=2]
[ext_resource path="res://art/login/New Popup.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/settings/ON.png" type="Texture" id=5]
[ext_resource path="res://art/settings/Information.png" type="Texture" id=6]
[ext_resource path="res://art/settings/Contact us.png" type="Texture" id=7]
[ext_resource path="res://art/settings/Review.png" type="Texture" id=8]
[ext_resource path="res://art/settings/Logout.png" type="Texture" id=9]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="SettingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -165.5
margin_right = 151.5
margin_bottom = 165.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="sound" type="Control" parent="popup"]
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.25
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="popup/sound"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.0
margin_right = 106.05
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Sound On"

[node name="icon" type="TextureRect" parent="popup/sound"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 86.082
margin_top = -14.7622
margin_right = 86.082
margin_bottom = 63.3078
rect_scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="btnSound" type="Button" parent="popup/sound"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="PlayerInfo" type="Control" parent="popup"]
editor/display_folded = true
anchor_left = 0.15
anchor_top = 0.3
anchor_right = 0.85
anchor_bottom = 0.4
margin_top = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="popup/PlayerInfo"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.0
margin_right = 106.05
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Player Info"

[node name="icon" type="TextureRect" parent="popup/PlayerInfo"]
margin_left = 167.0
margin_top = -6.0
margin_right = 256.0
margin_bottom = 82.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )
stretch_mode = 1

[node name="playerinfo" type="Button" parent="popup/PlayerInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Contactus" type="Control" parent="popup"]
editor/display_folded = true
anchor_left = 0.15
anchor_top = 0.3
anchor_right = 0.85
anchor_bottom = 0.4
margin_top = 46.0
margin_bottom = 46.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="popup/Contactus"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.0
margin_right = 106.05
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Contact Us"

[node name="icon" type="TextureRect" parent="popup/Contactus"]
margin_left = 167.0
margin_top = -6.0
margin_right = 255.0
margin_bottom = 82.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="contactus" type="Button" parent="popup/Contactus"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Review" type="Control" parent="popup"]
editor/display_folded = true
anchor_left = 0.15
anchor_top = 0.3
anchor_right = 0.85
anchor_bottom = 0.4
margin_top = 93.0
margin_bottom = 93.0
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="popup/Review"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -16.0
margin_right = 106.05
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Review"

[node name="icon" type="TextureRect" parent="popup/Review"]
margin_left = 167.0
margin_top = -6.0
margin_right = 255.0
margin_bottom = 82.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
stretch_mode = 1

[node name="review" type="Button" parent="popup/Review"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="logout" type="Button" parent="popup"]
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = 15.0
margin_top = -3.0
margin_right = 293.1
margin_bottom = 111.9
rect_scale = Vector2( 0.4, 0.4 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true

[node name="close" type="Button" parent="popup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = -14.0
margin_right = 47.0
margin_bottom = 87.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true

[connection signal="pressed" from="popup/sound/btnSound" to="." method="_on_btnSound_pressed"]
[connection signal="pressed" from="popup/PlayerInfo/playerinfo" to="." method="_on_playerinfo_pressed"]
[connection signal="pressed" from="popup/Contactus/contactus" to="." method="_on_contactus_pressed"]
[connection signal="pressed" from="popup/Review/review" to="." method="_on_review_pressed"]
[connection signal="pressed" from="popup/logout" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="popup/close" to="." method="_on_close_button_down"]
[connection signal="button_up" from="popup/close" to="." method="_on_close_button_up"]
[connection signal="pressed" from="popup/close" to="." method="_on_close_pressed"]
